src/OpenCvSharp.Native/include/open_cv_sharp/objdetect/objdetect.h

typedef struct jyppx_ocv_qrcode_detector jyppx_ocv_qrcode_detector;
typedef struct jyppx_ocv_barcode_detector jyppx_ocv_barcode_detector;
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_qrcode_detector_create(
    jyppx_ocv_qrcode_detector** detector);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API void jyppx_ocv_qrcode_detector_release_handle(
    jyppx_ocv_qrcode_detector* detector);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_qrcode_detector_set_eps_x(
    jyppx_ocv_qrcode_detector* detector,
    double eps_x);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_qrcode_detector_set_eps_y(
    jyppx_ocv_qrcode_detector* detector,
    double eps_y);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_qrcode_detector_set_use_alignment_markers(
    jyppx_ocv_qrcode_detector* detector,
    int use_alignment_markers);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_qrcode_detector_detect(
    const jyppx_ocv_qrcode_detector* detector,
    const jyppx_ocv_mat* image,
    jyppx_ocv_mat* points,
    int* detected);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_qrcode_detector_decode_length(
    const jyppx_ocv_qrcode_detector* detector,
    const jyppx_ocv_mat* image,
    const jyppx_ocv_mat* points,
    jyppx_ocv_mat* straight_qrcode,
    int* length);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_qrcode_detector_decode_fill(
    const jyppx_ocv_qrcode_detector* detector,
    const jyppx_ocv_mat* image,
    const jyppx_ocv_mat* points,
    jyppx_ocv_mat* straight_qrcode,
    char* buffer,
    int buffer_capacity,
    int* written);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_qrcode_detector_detect_and_decode_length(
    const jyppx_ocv_qrcode_detector* detector,
    const jyppx_ocv_mat* image,
    jyppx_ocv_mat* points,
    jyppx_ocv_mat* straight_qrcode,
    int* length);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_qrcode_detector_detect_and_decode_fill(
    const jyppx_ocv_qrcode_detector* detector,
    const jyppx_ocv_mat* image,
    jyppx_ocv_mat* points,
    jyppx_ocv_mat* straight_qrcode,
    char* buffer,
    int buffer_capacity,
    int* written);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_qrcode_detector_decode_curved_length(
    jyppx_ocv_qrcode_detector* detector,
    const jyppx_ocv_mat* image,
    const jyppx_ocv_mat* points,
    jyppx_ocv_mat* straight_qrcode,
    int* length);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_qrcode_detector_decode_curved_fill(
    jyppx_ocv_qrcode_detector* detector,
    const jyppx_ocv_mat* image,
    const jyppx_ocv_mat* points,
    jyppx_ocv_mat* straight_qrcode,
    char* buffer,
    int buffer_capacity,
    int* written);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_qrcode_detector_detect_and_decode_curved_length(
    jyppx_ocv_qrcode_detector* detector,
    const jyppx_ocv_mat* image,
    jyppx_ocv_mat* points,
    jyppx_ocv_mat* straight_qrcode,
    int* length);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_qrcode_detector_detect_and_decode_curved_fill(
    jyppx_ocv_qrcode_detector* detector,
    const jyppx_ocv_mat* image,
    jyppx_ocv_mat* points,
    jyppx_ocv_mat* straight_qrcode,
    char* buffer,
    int buffer_capacity,
    int* written);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_qrcode_detector_detect_multi(
    const jyppx_ocv_qrcode_detector* detector,
    const jyppx_ocv_mat* image,
    jyppx_ocv_mat* points,
    int* detected);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_qrcode_detector_decode_multi_count(
    const jyppx_ocv_qrcode_detector* detector,
    const jyppx_ocv_mat* image,
    const jyppx_ocv_mat* points,
    int* decoded,
    int* string_count,
    int* byte_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_qrcode_detector_decode_multi_fill(
    const jyppx_ocv_qrcode_detector* detector,
    const jyppx_ocv_mat* image,
    const jyppx_ocv_mat* points,
    int* offsets,
    int offset_capacity,
    char* buffer,
    int buffer_capacity,
    int* decoded,
    int* string_count,
    int* byte_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_qrcode_detector_detect_and_decode_multi_count(
    const jyppx_ocv_qrcode_detector* detector,
    const jyppx_ocv_mat* image,
    jyppx_ocv_mat* points,
    int* decoded,
    int* string_count,
    int* byte_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_qrcode_detector_detect_and_decode_multi_fill(
    const jyppx_ocv_qrcode_detector* detector,
    const jyppx_ocv_mat* image,
    jyppx_ocv_mat* points,
    int* offsets,
    int offset_capacity,
    char* buffer,
    int buffer_capacity,
    int* decoded,
    int* string_count,
    int* byte_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_qrcode_detector_get_encoding(
    const jyppx_ocv_qrcode_detector* detector,
    int code_index,
    int* encoding);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_barcode_detector_create(
    jyppx_ocv_barcode_detector** detector);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_barcode_detector_create_with_super_resolution(
    const char* super_resolution_model_path,
    jyppx_ocv_barcode_detector** detector);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API void jyppx_ocv_barcode_detector_release_handle(
    jyppx_ocv_barcode_detector* detector);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_barcode_detector_detect(
    const jyppx_ocv_barcode_detector* detector,
    const jyppx_ocv_mat* image,
    jyppx_ocv_mat* points,
    int* detected);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_barcode_detector_decode_count(
    const jyppx_ocv_barcode_detector* detector,
    const jyppx_ocv_mat* image,
    const jyppx_ocv_mat* points,
    int* decoded,
    int* string_count,
    int* byte_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_barcode_detector_decode_fill(
    const jyppx_ocv_barcode_detector* detector,
    const jyppx_ocv_mat* image,
    const jyppx_ocv_mat* points,
    int* offsets,
    int offset_capacity,
    char* buffer,
    int buffer_capacity,
    int* decoded,
    int* string_count,
    int* byte_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_barcode_detector_decode_with_type_count(
    const jyppx_ocv_barcode_detector* detector,
    const jyppx_ocv_mat* image,
    const jyppx_ocv_mat* points,
    int* decoded,
    int* info_count,
    int* info_byte_count,
    int* type_count,
    int* type_byte_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_barcode_detector_decode_with_type_fill(
    const jyppx_ocv_barcode_detector* detector,
    const jyppx_ocv_mat* image,
    const jyppx_ocv_mat* points,
    int* info_offsets,
    int info_offset_capacity,
    char* info_buffer,
    int info_buffer_capacity,
    int* type_offsets,
    int type_offset_capacity,
    char* type_buffer,
    int type_buffer_capacity,
    int* decoded,
    int* info_count,
    int* info_byte_count,
    int* type_count,
    int* type_byte_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_barcode_detector_detect_and_decode_count(
    const jyppx_ocv_barcode_detector* detector,
    const jyppx_ocv_mat* image,
    jyppx_ocv_mat* points,
    int* decoded,
    int* string_count,
    int* byte_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_barcode_detector_detect_and_decode_fill(
    const jyppx_ocv_barcode_detector* detector,
    const jyppx_ocv_mat* image,
    jyppx_ocv_mat* points,
    int* offsets,
    int offset_capacity,
    char* buffer,
    int buffer_capacity,
    int* decoded,
    int* string_count,
    int* byte_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_barcode_detector_detect_and_decode_with_type_count(
    const jyppx_ocv_barcode_detector* detector,
    const jyppx_ocv_mat* image,
    jyppx_ocv_mat* points,
    int* decoded,
    int* info_count,
    int* info_byte_count,
    int* type_count,
    int* type_byte_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_barcode_detector_detect_and_decode_with_type_fill(
    const jyppx_ocv_barcode_detector* detector,
    const jyppx_ocv_mat* image,
    jyppx_ocv_mat* points,
    int* info_offsets,
    int info_offset_capacity,
    char* info_buffer,
    int info_buffer_capacity,
    int* type_offsets,
    int type_offset_capacity,
    char* type_buffer,
    int type_buffer_capacity,
    int* decoded,
    int* info_count,
    int* info_byte_count,
    int* type_count,
    int* type_byte_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_barcode_detector_get_downsampling_threshold(
    const jyppx_ocv_barcode_detector* detector,
    double* threshold);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_barcode_detector_set_downsampling_threshold(
    jyppx_ocv_barcode_detector* detector,
    double threshold);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_barcode_detector_get_gradient_threshold(
    const jyppx_ocv_barcode_detector* detector,
    double* threshold);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_barcode_detector_set_gradient_threshold(
    jyppx_ocv_barcode_detector* detector,
    double threshold);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_barcode_detector_get_detector_scales_count(
    const jyppx_ocv_barcode_detector* detector,
    int* count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_barcode_detector_get_detector_scales_fill(
    const jyppx_ocv_barcode_detector* detector,
    float* scales,
    int scale_capacity,
    int* count);