src/OpenCvSharp/Internal/Interop/NativeMethods.ObjDetect.DllImport.cs

#if !NET7_0_OR_GREATER
using System;
using System.Runtime.InteropServices;

namespace OpenCvSharp.Internal.Interop
{
    internal static unsafe partial class NativeMethods
    {
        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_detector_create")]
        internal static extern int QRCodeDetectorCreate(out IntPtr detector);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_detector_release_handle")]
        internal static extern void QRCodeDetectorReleaseHandle(IntPtr detector);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_detector_set_eps_x")]
        internal static extern int QRCodeDetectorSetEpsX(IntPtr detector, double epsX);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_detector_set_eps_y")]
        internal static extern int QRCodeDetectorSetEpsY(IntPtr detector, double epsY);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_detector_set_use_alignment_markers")]
        internal static extern int QRCodeDetectorSetUseAlignmentMarkers(IntPtr detector, int useAlignmentMarkers);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_detector_detect")]
        internal static extern int QRCodeDetectorDetect(IntPtr detector, IntPtr image, IntPtr points, out int detected);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_detector_decode_length")]
        internal static extern int QRCodeDetectorDecodeLength(IntPtr detector, IntPtr image, IntPtr points, IntPtr straightQRCode, out int length);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_detector_decode_fill")]
        internal static extern int QRCodeDetectorDecodeFill(IntPtr detector, IntPtr image, IntPtr points, IntPtr straightQRCode, byte* buffer, int bufferCapacity, out int written);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_detector_detect_and_decode_length")]
        internal static extern int QRCodeDetectorDetectAndDecodeLength(IntPtr detector, IntPtr image, IntPtr points, IntPtr straightQRCode, out int length);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_detector_detect_and_decode_fill")]
        internal static extern int QRCodeDetectorDetectAndDecodeFill(IntPtr detector, IntPtr image, IntPtr points, IntPtr straightQRCode, byte* buffer, int bufferCapacity, out int written);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_detector_decode_curved_length")]
        internal static extern int QRCodeDetectorDecodeCurvedLength(IntPtr detector, IntPtr image, IntPtr points, IntPtr straightQRCode, out int length);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_detector_decode_curved_fill")]
        internal static extern int QRCodeDetectorDecodeCurvedFill(IntPtr detector, IntPtr image, IntPtr points, IntPtr straightQRCode, byte* buffer, int bufferCapacity, out int written);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_detector_detect_and_decode_curved_length")]
        internal static extern int QRCodeDetectorDetectAndDecodeCurvedLength(IntPtr detector, IntPtr image, IntPtr points, IntPtr straightQRCode, out int length);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_detector_detect_and_decode_curved_fill")]
        internal static extern int QRCodeDetectorDetectAndDecodeCurvedFill(IntPtr detector, IntPtr image, IntPtr points, IntPtr straightQRCode, byte* buffer, int bufferCapacity, out int written);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_detector_detect_multi")]
        internal static extern int QRCodeDetectorDetectMulti(IntPtr detector, IntPtr image, IntPtr points, out int detected);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_detector_decode_multi_count")]
        internal static extern int QRCodeDetectorDecodeMultiCount(IntPtr detector, IntPtr image, IntPtr points, out int decoded, out int stringCount, out int byteCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_detector_decode_multi_fill")]
        internal static extern int QRCodeDetectorDecodeMultiFill(IntPtr detector, IntPtr image, IntPtr points, int* offsets, int offsetCapacity, byte* buffer, int bufferCapacity, out int decoded, out int stringCount, out int byteCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_detector_detect_and_decode_multi_count")]
        internal static extern int QRCodeDetectorDetectAndDecodeMultiCount(IntPtr detector, IntPtr image, IntPtr points, out int decoded, out int stringCount, out int byteCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_detector_detect_and_decode_multi_fill")]
        internal static extern int QRCodeDetectorDetectAndDecodeMultiFill(IntPtr detector, IntPtr image, IntPtr points, int* offsets, int offsetCapacity, byte* buffer, int bufferCapacity, out int decoded, out int stringCount, out int byteCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_detector_get_encoding")]
        internal static extern int QRCodeDetectorGetEncoding(IntPtr detector, int codeIndex, out int encoding);

        [StructLayout(LayoutKind.Sequential)]
        internal struct QRCodeDetectorArucoParamsNative
        {
            internal float MinModuleSizeInPyramid;
            internal float MaxRotation;
            internal float MaxModuleSizeMismatch;
            internal float MaxTimingPatternMismatch;
            internal float MaxPenalties;
            internal float MaxColorsMismatch;
            internal float ScaleTimingPatternScore;
        }

        [StructLayout(LayoutKind.Sequential)]
        internal struct QRCodeEncoderParamsNative
        {
            internal int Version;
            internal int CorrectionLevel;
            internal int Mode;
            internal int StructureNumber;
        }

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_barcode_detector_create")]
        internal static extern int BarcodeDetectorCreate(out IntPtr detector);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_barcode_detector_create_with_super_resolution")]
        internal static extern int BarcodeDetectorCreateWithSuperResolution(byte[] superResolutionModelPath, out IntPtr detector);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_barcode_detector_release_handle")]
        internal static extern void BarcodeDetectorReleaseHandle(IntPtr detector);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_barcode_detector_detect")]
        internal static extern int BarcodeDetectorDetect(IntPtr detector, IntPtr image, IntPtr points, out int detected);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_barcode_detector_decode_count")]
        internal static extern int BarcodeDetectorDecodeCount(IntPtr detector, IntPtr image, IntPtr points, out int decoded, out int stringCount, out int byteCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_barcode_detector_decode_fill")]
        internal static extern int BarcodeDetectorDecodeFill(IntPtr detector, IntPtr image, IntPtr points, int* offsets, int offsetCapacity, byte* buffer, int bufferCapacity, out int decoded, out int stringCount, out int byteCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_barcode_detector_decode_with_type_count")]
        internal static extern int BarcodeDetectorDecodeWithTypeCount(IntPtr detector, IntPtr image, IntPtr points, out int decoded, out int infoCount, out int infoByteCount, out int typeCount, out int typeByteCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_barcode_detector_decode_with_type_fill")]
        internal static extern int BarcodeDetectorDecodeWithTypeFill(IntPtr detector, IntPtr image, IntPtr points, int* infoOffsets, int infoOffsetCapacity, byte* infoBuffer, int infoBufferCapacity, int* typeOffsets, int typeOffsetCapacity, byte* typeBuffer, int typeBufferCapacity, out int decoded, out int infoCount, out int infoByteCount, out int typeCount, out int typeByteCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_barcode_detector_detect_and_decode_count")]
        internal static extern int BarcodeDetectorDetectAndDecodeCount(IntPtr detector, IntPtr image, IntPtr points, out int decoded, out int stringCount, out int byteCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_barcode_detector_detect_and_decode_fill")]
        internal static extern int BarcodeDetectorDetectAndDecodeFill(IntPtr detector, IntPtr image, IntPtr points, int* offsets, int offsetCapacity, byte* buffer, int bufferCapacity, out int decoded, out int stringCount, out int byteCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_barcode_detector_detect_and_decode_with_type_count")]
        internal static extern int BarcodeDetectorDetectAndDecodeWithTypeCount(IntPtr detector, IntPtr image, IntPtr points, out int decoded, out int infoCount, out int infoByteCount, out int typeCount, out int typeByteCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_barcode_detector_detect_and_decode_with_type_fill")]
        internal static extern int BarcodeDetectorDetectAndDecodeWithTypeFill(IntPtr detector, IntPtr image, IntPtr points, int* infoOffsets, int infoOffsetCapacity, byte* infoBuffer, int infoBufferCapacity, int* typeOffsets, int typeOffsetCapacity, byte* typeBuffer, int typeBufferCapacity, out int decoded, out int infoCount, out int infoByteCount, out int typeCount, out int typeByteCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_barcode_detector_get_downsampling_threshold")]
        internal static extern int BarcodeDetectorGetDownsamplingThreshold(IntPtr detector, out double threshold);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_barcode_detector_set_downsampling_threshold")]
        internal static extern int BarcodeDetectorSetDownsamplingThreshold(IntPtr detector, double threshold);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_barcode_detector_get_gradient_threshold")]
        internal static extern int BarcodeDetectorGetGradientThreshold(IntPtr detector, out double threshold);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_barcode_detector_set_gradient_threshold")]
        internal static extern int BarcodeDetectorSetGradientThreshold(IntPtr detector, double threshold);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_barcode_detector_get_detector_scales_count")]
        internal static extern int BarcodeDetectorGetDetectorScalesCount(IntPtr detector, out int count);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_barcode_detector_get_detector_scales_fill")]
        internal static extern int BarcodeDetectorGetDetectorScalesFill(IntPtr detector, float[] scales, int scaleCapacity, out int count);
